Fixed horizontal alignment of social / playback

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -39,7 +39,7 @@ header {
 		display: flex;
 		align-items: center;
 		#audio-controls {
-			padding-left: 0.7em;
+			padding-left: 1.1em;
 			border-left: 3px solid #F2F2F2;
 			svg {
 				fill: #B2B2B2;
@@ -52,6 +52,7 @@ header {
 			list-style: none;
 			display: flex;
 			align-items: center;
+			margin-right: 0.65em;
 		}
 		li {
 			display: inline-block;
